editing the styles

--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/layout.css">
-    <link rel="stylesheet" href="styles/module.css">
-    <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/reset.css">
+  <!-- <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/module.css"> -->
+  <link rel="stylesheet" href="styles/style.css">
 
-    <title>Lab-01</title>
+  <title>Lab-01</title>
 </head>
+
 <body>
-    <header>a</header>
-<main>
-    <section>
-      <div id="firstDiv"> b</div>
-      <div id="secDiv">c</div>
-      <div id="thirdDiv">d</div>
-      
-      <div id="fourthDiv">e</div>
-      <div  id="fifthDiv">f</div>
-      <div  id="sixthDiv">g</div>
-      <div  id="seventhDiv">h</div>
-    </section>
+
+
+  <main>
+
+    <div id="a">a</div>
+    <div id="b"> b</div>
+    <div id="c">c</div>
+    <div id="d">d</div>
+    <div id="e">e</div>
+    <div id="f">f</div>
+    <div id="g">g</div>
+    <div id="h">h</div>
+    <div id="i">i</div>
+
   </main>
-    <footer>i</footer>
-
-
 
 </body>
+
 </html>
