--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/reset.css">
-  <!-- <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/layout.css">
-  <link rel="stylesheet" href="styles/module.css"> -->
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/theme.css">
+  <!-- <link rel="stylesheet" href="styles/style.css"> -->
 
   <title>Lab-01</title>
 </head>
